# Music-notes-detection

./: pyproject.toml
src/: config.py  music_notes_detection.py
