[tool.poetry]
name = "music-notes-detection"
version = "0.1.0"
description = ""
authors = ["'PythBuster' <'pythbuster@gmail.com'>"]
readme = "README.md"
packages = [{include = "music_notes_detection"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
